# trd-lex

./: .cspell.json  .env.example  .gitignore  Pain Point กรมธนารักษ์ จาก Social Listening.docx  README.md  SKILL.md  ShapeNongkhy.shp  datatest.csv  docker-compose.yml  git_push.bat  land_kanjanaburiwgs47.kml  package.json  parcels_nongkhai_kanjanaburi.xlsx  run_backend.bat  setup_deploy.bat  tailwind.config.js  vercel.json  การคิดค่าเช่าค่าธรรมเนียม.md
.agents/: AGENTS.md
.github/workflows/: deploy.yml
SKILLS/: README.md  skill_cost.md
backend/: .dockerignore  Dockerfile  README.md  export_all_to_excel.py  export_kml_to_excel.py  index.py  package.json  process_kml.py  process_shp.py  pyproject.toml  requirements.txt  run_backend.bat  seed.py  seed_kanjanaburi_parcels.py  seed_parcels.py  setup_backend.bat  tsconfig.json
backend/app/: __init__.py  main.py
backend/app/core/: __init__.py  calculations.py  config.py  security.py
backend/app/models/: __init__.py  enums.py
backend/app/routes/: auth.py  calculator.py  contracts.py  dashboard.py  listings.py
backend/app/schemas/: auth.py  calculator.py  contract.py  dashboard.py  listing.py
backend/app/services/: auth_service.py  contract_service.py  listing_service.py
backend/prisma/: schema.prisma  seed.ts
backend/tests/: conftest.py  test_auth.py  test_calculator.py  test_contracts.py  test_setup.py
data/: data.csv  kanjanaburi_parcels.xlsx
docs/: urban_planning_design.md
frontend/: .dockerignore  Dockerfile  next.config.ts  package.json  setup_frontend.bat  tailwind.config.ts  tsconfig.tsbuildinfo
(+37 files in other folders)
