[project]
name = "trd-lex-backend"
version = "1.0.0"
description = "TRD Lease Exchange Backend API"
requires-python = ">=3.9"
dependencies = [
    "fastapi==0.115.12",
    "uvicorn[standard]==0.34.3",
    "pydantic==2.11.4",
    "pydantic-settings==2.9.1",
    "prisma==0.15.0",
    "python-jose[cryptography]==3.4.0",
    "python-multipart==0.0.20",
    "passlib[bcrypt]==1.7.4",
]

[tool.vercel]
entrypoint = "index.py"
